--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,12 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
   min-width: 1100px;
+  max-width: 1440px;
   margin: 0;
   font-family: Raleway, sans-serif;
 }
@@ -25,10 +26,10 @@ blockquote {
   padding: 0;
 }
 
-a {
-  color: inherit;
+.img {
+  width: 100%;
 }
 
-img {
-  width: 100%;
+a {
+  color: inherit;
 }
