--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,306 @@
-/* место для вашего кода */
+.text-white {
+  color: #FFF;
+}
+
+.text-black {
+  color: #000;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr 138px 1fr;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 92px 50px;
+  font-size: 18px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  list-style-type: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active .header__link {
+  text-decoration: none;
+  list-style: none;
+}
+
+.address {
+  justify-self: end;
+  font-style: normal;
+  line-height: 24.3px;
+}
+
+.adress__link {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.cover {
+  position: relative;
+  z-index: -1;
+  max-width: 1440px;
+  height: 757px;
+  margin: 0 auto;
+  padding: 165px 50px 0 50px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  opacity: 0.6;
+  background: #000;
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 134px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 115%;
+  letter-spacing: 30px;
+}
+
+.aligned-text_center {
+  line-height: 100%;
+  text-align: center;
+
+}
+
+.aligned-text_right {
+  line-height: 100%;
+  text-align: end;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-bottom: 70px;
+  font-size: 22px;
+  line-height: 28px;
+
+}
+
+.cover__description-text {
+  margin-right: 78px;
+  word-spacing: 19px;
+
+}
+
+.bet-button {
+  flex-shrink: 0;
+  width: 257px;
+  height: 52px;
+  border: 1px solid #FFF;
+  color:#FFF;
+  font-size: 22px;
+  line-height: normal;
+  background-color: transparent;
+}
+
+.lots{
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 180px 50px 0 50px;
+}
+
+.lots__heading{
+  padding-bottom: 27px;
+  padding-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.lots__card-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 25px;
+  min-height: 450px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  list-style: none;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 430px;
+  height: 100%;
+  padding: 50px 40px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+
+}
+
+.card__title {
+  z-index: 1;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-decoration-line: underline;
+}
+
+.card__text {
+  z-index: 1;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.lots__look-more-link{
+  display: block;
+  padding-top: 30px;
+  padding-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 180px 50px 180px 50px;
+  grid-gap: 25px;
+}
+
+.about-logo {
+  display: flex;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000;
+}
+.about__logo-image {
+  flex-shrink: 0;
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  display: inline-flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 100px;
+  height: 388px;
+  padding-top: 100px;
+  padding-bottom: 0px;
+}
+
+.about__title {
+  padding-top: 100px;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 100px 50px 90px 50px;
+  font-size: 18px;
+
+}
+
+.footer-address {
+  justify-content: start;
+  font-style: normal;
+  line-height: 24.3px;
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.footer__menu {
+  justify-self: center;
+  align-self: start;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+  list-style: none;
+}
+
+.footer__social-list{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-link {
+  display: block;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
+
+
